continue to style, change divs to buttons, fix slider out of bounds

--- a/css/jquery-ui-1.8.19.custom.css
+++ b/css/jquery-ui-1.8.19.custom.css
@@ -9,7 +9,7 @@
  */
 
 .ui-state-disabled { cursor: default !important; }
-.ui-widget-content { border: 1px solid #dddddd; background: #ddd url(img/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x; color: #333333; }
+.ui-widget-content { border-top: 0px; border-left: 0; border-right: 0; background: #ddd url(img/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x; color: #333333; }
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #cccccc; background: #f6f6f6 url(img/ui-bg_glass_100_f6f6f6_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #1c94c4; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #1c94c4; text-decoration: none; }
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #fbcb09; background: #fdf5ce url(img/ui-bg_glass_100_fdf5ce_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #c77405; }
@@ -17,7 +17,7 @@
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #fbd850; background: #ffffff url(img/ui-bg_glass_65_ffffff_1x400.png) 50% 50% repeat-x; font-weight: bold; color: #eb8f00; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #eb8f00; text-decoration: none; }
 .ui-widget :active { outline: none; }
-.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }
+.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { opacity: .8; filter:Alpha(Opacity=80); background-image: none; z-index: 2; }
 
 
 /* Misc visuals
@@ -31,15 +31,10 @@
  *
  * http://docs.jquery.com/UI/Slider#theming
  */
-.ui-slider { position: relative; text-align: left; }
-.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 16px; height: 16px; cursor: pointer; outline: none;}
+.ui-slider { position: relative; text-align: left; background: #777; }
+.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 15px; height: 15px; cursor: pointer; outline: none;}
 .ui-slider .ui-slider-range { position: absolute; z-index: 1; display: block; background-position: 0 0; }
 
-.ui-slider-horizontal { height: 15px; }
-.ui-slider-horizontal .ui-slider-handle { top: -2px; margin-left: 5px; }
+.ui-slider-horizontal { height: 10px; }
+.ui-slider-horizontal .ui-slider-handle { top: -.3em; margin-left: -.6em; }
 .ui-slider-horizontal .ui-slider-range { top: 0; height: 100%; }
-.ui-slider-horizontal .ui-slider-range-min { left: 15px; }
-.ui-slider-horizontal .ui-slider-range-max { right: 5px; }
-
-.ui-slider-handle {
-}
