--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,14 @@ div#tools {
 
 div#drawsection {
   border: 1px solid #000;
+  border-bottom: 0;
   width: 578px;
   height: 400px;
 }
 
 div#drawsection.is_recording{
   border: 1px solid red;
+  border-bottom: 0;
 }
 
 div#tools, div#drawsection {
@@ -70,12 +72,22 @@ div#bottom-row{
   margin-top: 1px;
   border: 1px solid #000;
   border-top: none;
-  height: 45px;
+  height: 40px;
   width: 578px;
   color: #FFF;
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+div#slider_container{
+  background: #777;
+  padding: 0 8px 0 6px;
+  border-top: 1px solid #000;
 }
 
 div#controls{
+  z-index: 1;
+  border-top: 1px solid #000;
   background: #595959; /* Old browsers */
   background: -moz-linear-gradient(top, #595959 0%, #000000 99%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#595959), color-stop(99%,#000000)); /* Chrome,Safari4+ */
@@ -87,32 +99,31 @@ div#controls{
   position: relative;
 }
 
-div#controls:hover {
-}
-
-div#elapsed_timer, div#time_separator, div#total_timer, div#play_pause, div#recorder{
+div#elapsed_timer, div#time_separator, div#total_timer, button#play_pause, button#recorder{
   float:left;
 }
 
-div#recorder{
+button#recorder{
   position: absolute;
   left: 45%;
   border-right: 1px solid #999;
   border-left: 1px solid #999;
   padding: 7px 10px;
-  height: 14px;
-  width: 35px;
+  height: 29px;
+  width: 45px;
   background: url("img/record-icon.png") center center no-repeat;
-  opacity: 0.7;
+  opacity: 0.5;
+  border-top: 0;
+  border-bottom: 0;
 }
 
-div#recorder:hover{
+button#recorder:hover{
   cursor:pointer;
   background: url("img/record-icon.png") center center no-repeat;
   opacity: 1.0;
 }
 
-div#recorder.is_recording{
+button#recorder.is_recording{
   background: url("img/stop-recording-icon.png") center center no-repeat;
   opacity: 1.0;
 }
@@ -134,20 +145,30 @@ div#total_timer, div#time_separator {
   color: #999;
 }
 
-div#play_pause {
+button#play_pause {
   width: 50px;
   height: 29px;
   background: url("img/play-icon.png")  center center no-repeat;
-  opacity: 0.7;
+  opacity: 0.5;
+  border: 0;
 }
 
-div#play_pause:hover {
+button#play_pause:hover {
   cursor: pointer;
   opacity: 1.0;
 }
 
-div#play_pause.is_playing {
+button#play_pause.is_playing {
   background: url("img/pause-icon.png") center center no-repeat;
+}
+
+button#play_pause:disabled, button#recorder:disabled {
+  opacity: 0.3;
+}
+
+button#play_pause:disabled:hover, button#recorder:disabled:hover{
+  opacity: 0.3;
+  cursor: not-allowed;
 }
 
 
